--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "concurrently": "^5.0.2",
-    "config": "^3.2.4",
+    "concurrently": "^5.3.0",
+    "config": "^3.3.1",
     "express": "^4.17.1",
-    "express-validator": "^6.3.1",
-    "gravatar": "^1.8.0",
+    "express-validator": "^6.6.1",
+    "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^4.13.20",
-    "request": "^2.88.0"
+    "mongoose": "^5.9.29",
+    "npm-check-updates": "^7.1.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.4"
   }
 }
